Artemis v1.x needs "--add-opens" vm params to run with Java 21
Fixes #191